frontend/test/should_fail/computations_no_procmethod3.grg
using computations_no_procmethod;

test bar()
{
	n:NO;
	
	if { n.no()<3; }
}
